Add book-level report of issues with all plotlines
